--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-onak (0.5.0+wip-1) UNRELEASED; urgency=low
+onak (0.6.0-1) UNRELEASED; urgency=low
 
+  * New upstream release
   * Bump debhelper compat level to 10
   * Set Rules-Requires-Root to no
   * Cleanup postinst to avoid recursive chown of database
