--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ onak (0.6.1-1) UNRELEASED; urgency=low
   * Add dependency on pkg-config
   * Remove --with=systemd from dh call.
   * Rename debian/NEWS.Debian to debian/NEWS
+  * Bump Debian Standards-Version to 4.5.0
 
  -- Jonathan McDowell <noodles@earth.li>  Thu, 22 Aug 2019 07:18:49 +0100
 
