--- a/keys/README
+++ b/keys/README
@@ -15,7 +15,9 @@ blackcat.key
 autodns.key
 	A v4 DSA/Elg key.
 noodles.key
-	My v4 DSA/Elg key.
+	My v4 RSA key.
+noodles-ecc.key
+	My v4 ECC ED25519 key.
 putro.key
 	A v4 key with a non revocation signature on the public key.
 huggie-rev.key
