--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+onak (0.6.3-1+git) UNRELEASED; urgency=low
+
+  * Development snapshot
+  * Cleanup database files on package purge (Closes: #1053323)
+
+ -- Jonathan McDowell <noodles@earth.li>  Tue, 15 Jul 2025 10:21:10 +0100
+
 onak (0.6.3-1) unstable; urgency=low
 
   * New upstream release
