--- a/keydb/onak-keyd.8
+++ b/keydb/onak-keyd.8
@@ -1,9 +1,9 @@
 .TH KEYD 8
 .SH NAME
-keyd \- Backend key serving daemon for the onak PGP keyserver 
+onak-keyd \- Backend key serving daemon for the onak PGP keyserver
 .SH SYNOPSIS
 .PP
-.B keyd
+.B onak-keyd
 [
 .B options
 ]
@@ -39,4 +39,4 @@ This man page could probably do with some more details.
 .BR onak (1)
 .SH AUTHOR
 onak was written by Jonathan McDowell <noodles@earth.li>. It can be found at
-http://www.earth.li/projectpurple/progs/onak.html
+https://www.earth.li/projectpurple/progs/onak.html
