--- a/keydb/onak-keydctl.8
+++ b/keydb/onak-keydctl.8
@@ -1,18 +1,18 @@
 .TH KEYD 8
 .SH NAME
-keydctl \- control an onak keyd instance
+onak-keydctl \- control an onak keyd instance
 .SH SYNOPSIS
 .PP
-.B keydctl
+.B onak-keydctl
 [
 .B options
 ]
 .B command
 .SH DESCRIPTION
 .PP
-keydctl is a command line client for interacting with a backend keyd
+keydctl is a command line client for interacting with a backend onak-keyd
 daemon. It's intended to perform functions that are specifically related
-to keyd rather than being generic keyserver functions. See
+to onak-keyd rather than being generic keyserver functions. See
 .BR onak(1)
 for details about how to perform key related operations.
 .SS "Options"
@@ -25,15 +25,15 @@ Display help text.
 .SS "Commands"
 .TP
 .B check
-Query if keyd is running and accepting commands. Returns 0 if it is, 1
+Query if onak-keyd is running and accepting commands. Returns 0 if it is, 1
 otherwise. Outputs nothing to stdout/stderr.
 .TP
 .B quit
-Request that keyd exits cleanly
+Request that onak-keyd exits cleanly
 .TP
 .B status
-Display the status of a running keyd. Currently the protocol version in use,
-when keyd was started, the number of client connections seen and a breakdown
+Display the status of a running onak-keyd. Currently the protocol version in use,
+when onak-keyd was started, the number of client connections seen and a breakdown
 of the commands seen.
 .SH FILES
 .br
@@ -45,7 +45,7 @@ of the commands seen.
 This man page could probably do with some more details.
 .SH "SEE ALSO"
 .BR onak (1)
-.BR keyd (8)
+.BR onak-keyd (8)
 .SH AUTHOR
 onak was written by Jonathan McDowell <noodles@earth.li>. It can be found at
-http://www.earth.li/projectpurple/progs/onak.html
+https://www.earth.li/projectpurple/progs/onak.html
