--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ onak (0.6.3-1+git) UNRELEASED; urgency=low
   * Update debian/watch to v4 + HTTPS
   * Drop debian/NEWS
   * Add skeleton autopkgtests
+  * Update pkg-config -> pkgconf
 
  -- Jonathan McDowell <noodles@earth.li>  Tue, 15 Jul 2025 10:21:10 +0100
 
