--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ onak (0.6.3-1+git) UNRELEASED; urgency=low
   * Drop debian/NEWS
   * Add skeleton autopkgtests
   * Update pkg-config -> pkgconf
+  * Switch debian/copyright to DEP-5
 
  -- Jonathan McDowell <noodles@earth.li>  Tue, 15 Jul 2025 10:21:10 +0100
 
