--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ onak (0.6.3-1+git) UNRELEASED; urgency=low
   * Update pkg-config -> pkgconf
   * Switch debian/copyright to DEP-5
   * Bump Debian Standards-Version to 4.7.2
+  * Move most build deps to Build-Depend-Arch
 
  -- Jonathan McDowell <noodles@earth.li>  Tue, 15 Jul 2025 10:21:10 +0100
 
